--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
-        "laravel/lumen-framework": "^7.0"
+        "illuminate/mail": "^7.15",
+        "laravel/lumen-framework": "^7.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9.1",
